@@ -786,11 +786,13 @@ COpt::memoryPick();
  * @return boolean
  */
 	public static function delete($actionids){
-		if(empty($actionids)) return true;
-		$actionids = zbx_toArray($actionids);
 
 		try{
 			self::BeginTransaction(__METHOD__);
+
+		if(empty($actionids)) self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty input parameter'));
+
+		$actionids = zbx_toArray($actionids);
 
 			$options = array(
 				'actionids' => $actionids,
