@@ -562,7 +562,7 @@ COpt::memoryPick();
 				self::exception(ZBX_API_ERROR_PARAMETERS, 'DBerror');
 
 			self::EndTransaction(true, __METHOD__);
-			return true;
+			return array('alertids'=> $alertids);
 		}
 		catch(APIException $e){
 			self::EndTransaction(false, __METHOD__);
