@@ -150,7 +150,7 @@ class CMaintenance extends CZBXAPI{
 		else{
 			$permission = $options['editable']?PERM_READ_WRITE:PERM_READ_ONLY;
 
-			
+
 
 			$sql =
 				'SELECT DISTINCT m.maintenanceid'.
@@ -752,7 +752,7 @@ Copt::memoryPick();
 
 
 			self::EndTransaction(true, __METHOD__);
-			return true;
+			return array('maintenanceids'=> $maintenanceids);
 		}
 		catch(APIException $e){
 			self::EndTransaction(false, __METHOD__);
@@ -813,7 +813,7 @@ Copt::memoryPick();
 			DB::delete('maintenances', $mid_cond);
 
 			self::EndTransaction(true, __METHOD__);
-			return true;
+			return array('maintenanceids'=> $maintenanceids);
 		}
 		catch(APIException $e){
 			self::EndTransaction(false, __METHOD__);
